[package]
name = "svp"
version = "0.2.0"
description = "Lattice sieving over the integers with arbitrary precision."
repository = "https://github.com/tacotaha/svp"
readme = "README.md"
categories = ["cryptography", "science"]
license = "MIT"
edition = "2021"

[dependencies]
rand = "0.8.5"
rug = "1.17.0"
